# lungcell_mil

./: .gitignore  README.md  manual_test.py  pyproject.toml  test_all_aggs.py  test_max_agg.py  test_pipeline.py  test_scatter.py  test_scatter_mean_add.py  torch_scatter-2.1.2+pt21cu121-cp312-cp312-linux_x86_64.whl
configs/: hyper_optim.yaml
configs/aggregator/: attention.yaml  gated_attention.yaml  max.yaml  mean.yaml
mil/: CellsData.py  CustomDataloader.py  DatasetMeta.py  evaluation_utils.py  models.py  schemas.py  training_utils.py
mil.egg-info/: PKG-INFO
notebooks/: baseline.ipynb  exploration_and_split.ipynb  optimization_testing.ipynb  testing.ipynb  torch_playground copy.ipynb  torch_playground.ipynb
scripts/: README.md  optimize_hyper.py  optimize_hyper_hydra.py  optimize_hyper_script.py
wandb/: settings
