[project]
name = "mil"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anndata>=0.12.6",
    "bayesian-optimization>=3.2.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch==2.5.1",
    "torchvision",
    "torch-scatter",
    "torch-geometric",
    "wandb>=0.25.1",
    "nbformat>=5.10.4",
    "ipykernel>=7.2.0",
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
]

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch==2.5.1"]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mil"]
